--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,15 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ui-view></div>
+    <div class="container-fluid no-padding">
+      <div>
+        <acme-navbar creation-date="main.creationDate"></acme-navbar>
+      </div>
+      <div class="container no-padding">
+      <div ui-view class="{{pageClass}}"></div>
+      </div>
+    </div>
+
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
